[project]
name = "mcp-docs-search"
version = "0.1.0"
description = "An MCP server that indexes and retrieves the latest code implementation examples from LLM libraries like OpenAI, langchain, and Llama."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
]
